@@ -29,10 +29,22 @@ sub new {
 	# Add ourself to the main window
 	$main->aui->AddPane(
 		$self,
-		Wx::AuiPaneInfo->new->Name('notebook')->CenterPane->Resizable(1)->PaneBorder(0)->Movable(1)->CaptionVisible(0)
-			->CloseButton(0)->MaximizeButton(0)->Floatable(1)->Dockable(1)->Layer(1)
+		Padre::Wx->aui_pane_info(
+			Name           => 'notebook',
+			Resizable      => 1,
+			PaneBorder     => 0,
+			Movable        => 1,
+			CaptionVisible => 0,
+			CloseButton    => 0,
+			MaximizeButton => 0,
+			Floatable      => 1,
+			Dockable       => 1,
+			Layer          => 1,
+		)->CenterPane,
 	);
-	$main->aui->caption( 'notebook' => Wx::gettext('Files') );
+	$main->aui->caption(
+		'notebook' => Wx::gettext('Files'),
+	);
 
 	Wx::Event::EVT_AUINOTEBOOK_PAGE_CHANGED(
 		$self, $self,
