@@ -22,6 +22,8 @@ Changes for Perl Application Development and Refactoring Environment
       user's home directory (GABRIELMAD)
     - Install some of the examples in the share directory and add an
       Open Example menu option (SZABGAB)
+    - Adding Padre::Wx->add_pane_info convenience method to prevent the need
+      for the stupid ugly Wx::AuiPaneInfo method chaining (ADAMK)
 
 0.41 2009.07.23
     - Remove Experimental mode.
